--- a/instagram/src/index.scss
+++ b/instagram/src/index.scss
@@ -17,3 +17,7 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
 }
+
+.load {
+    margin: 200px 600px;
+}
